Wed Jan  2 00:08:45 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* configure.ac src/apps/Makefile.am:
	- remove GNU style
	* src/dblib/dblib.c: make it compile

Mon Dec 31 15:05:16 EST 2007	JK Lowden <jklowden@freetds.org>
	* src/dblib/dblib.c fixed DBPRPAD, maybe

Mon Dec 31 11:29:50 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* misc/test-other.sh src/odbc/odbc.c:
	- relax test for cursor

Mon Dec 31 11:06:13 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/ctlib/blk.c src/odbc/unittests/attributes.c:
	* src/odbc/unittests/describecol.c src/tds/convert.c:
	* src/tds/login.c src/tds/mem.c:
	- minor signed/unsigned fixes
	* src/dblib/bcp.c: minor performance improve
	* src/dblib/dblib.c: fix date portability

Fri Dec 28 17:57:08 EST 2007	JK Lowden <jklowden@freetds.org>
	* src/tds/token.c minor change
	* src/tds/convert.c simpler tds_strftime
	* src/dblib/unittests/done_handling.c no spurious messages

Wed Dec 28 15:11:48 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* doc/userguide.sgml: accepted patch #1854381

Wed Dec 28 14:44:16 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* misc/freetds_autobuild misc/test-other.sh:
	- make amd64 works
	* misc/test-auto.sh: add --help option
	* src/tds/convert.c:
	- fix overflow in tds_convert_char
	- minor fixes for tds_strftime

Thu Dec 27 14:43:14 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* doc/.cvsignore: ignore autogenerated
	* include/tds.h src/replacements/vasprintf.c src/tds/convert.c:
	* src/tds/login.c src/tds/query.c src/tds/read.c:
	- remove some warnings

Thu Dec 27 11:20:55 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/unittests/common.c: make unixODBC happy
	* win32/config.h: define TDS_I64_FORMAT

Thu Dec 27 10:19:58 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/dblib/buffering.h:
	- remove warning if compiled with NDEBUG defined

Wed Dec 26 21:57:12 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>